--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
-        server: ftp.rbninterieurbouwbe.webhosting.be
+        server: ftp.rbninterieurbouwbe.webhosting.b
         username: rbninterieurbouwbe@rbninterieurbouwbe
         password: ${{ secrets.ftp_password }}
