--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
-        server: ftp.rbninterieurbouwbe.webhosting.be/www/
+        server: ftp.rbninterieurbouwbe.webhosting.be
         username: rbninterieurbouwbe@rbninterieurbouwbe
         PASSWORD: ${{ secrets.PASSWORD }}
+        server-dir: rbninterieurbouw.be/www/
